--- a/jiuxian/src/sass/page.scss
+++ b/jiuxian/src/sass/page.scss
@@ -1,2 +1,7 @@
 @import './common';
 
+.goods-item{
+    padding:10px;font-size:14px;
+    img{display:block;margin:0 auto 10px;width:80%;}
+    p{margin:5px 0;}
+}
