--- a/wechatTest/app.wxss
+++ b/wechatTest/app.wxss
@@ -8,3 +8,9 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
+.h1,.h2,.h3,.h4{font-weight:bold;}
+.h1{font-size:60rpx;}
+.h2{font-size:24px;}
+.h3{font-size:20px;}
+.h4{font-size:18px;}
