--- a/Wechat/baiduMusic/pages/index/index.wxml
+++ b/Wechat/baiduMusic/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!-- 引入模板 -->
-<import src="/template/index.wxml"/>
+<import src="/template/index.wxml" />
 
 <!--index.wxml-->
 <view>
@@ -14,19 +14,8 @@
     <view class="weui-search-bar__form">
       <view class="weui-search-bar__box">
         <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-        <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" />
-        <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
-          <icon type="clear" size="14"></icon>
-        </view>
+        <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}" bindtap="gotoSearch"/>
       </view>
-      <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
-        <icon class="weui-icon-search" type="search" size="14"></icon>
-        <view class="weui-search-bar__text">搜索</view>
-      </label>
     </view>
-    <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
-  </view>
-  <view class="weui-cells searchbar-result" wx:if="{{inputVal.length > 0}}">
-    <template is="twlist" data="{{datalist:searchResult,title:'搜索结果'}}"/>
   </view>
 </view>
