--- a/Wechat/baiduMusic/pages/player/player.wxml
+++ b/Wechat/baiduMusic/pages/player/player.wxml
@@ -9,10 +9,21 @@
   controls
   loop
 ></audio>
-<camera
+<!-- <camera
   device-position="back"
   flash="off"
   binderror="error"
   style="width: 100%; height: 300px;"
-></camera>
+></camera> -->
+<map
+  id="map"
+  longitude="{{longitude}}"
+  latitude="{{latitude}}"
+  scale="14"
+  bindcontroltap="controltap"
+  bindmarkertap="markertap"
+  bindregionchange="regionchange"
+  show-location
+  style="width: 100%; height: 300px;"
+></map>
 </view>
