--- a/Wechat/baiduMusic/template/index.wxml
+++ b/Wechat/baiduMusic/template/index.wxml
@@ -2,7 +2,7 @@
   <view class="weui-panel weui-panel_access">
     <view class="weui-panel__hd">{{title}}</view>
     <view class="weui-panel__bd">
-      <navigator wx:for="{{datalist}}" wx:key="songid" url="/pages/player/player?songid={{item.songid}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+      <navigator wx:for="{{datalist}}" wx:key="songid" url="/pages/player/player?song_id={{item.songid}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
         <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
           <image class="weui-media-box__thumb" src="{{item.pic}}" />
         </view>
@@ -22,5 +22,26 @@
 </template>
 
 <template name="list">
-
+  <view class="weui-panel weui-panel_access">
+            <view class="weui-panel__bd">
+                <navigator wx:for="{{datalist}}" wx:key="song_id" url="/pages/player/player?song_id={{item.song_id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+                    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+                        <image class="weui-media-box__thumb" src="{{item.pic_small}}" />
+                    </view>
+                    <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+                        <view class="weui-media-box__title">{{item.title}}</view>
+                        <view class="weui-media-box__desc">
+                          <view>歌手：{{item.author}}  （{{item.style}}）</view>
+                          <view>唱片公司：{{item.si_proxycompany}}</view>
+                        </view>
+                    </view>
+                </navigator>
+            </view>
+            <view class="weui-panel__ft">
+                <view class="weui-cell weui-cell_access weui-cell_link" data-type="{{type}}" bindtap="gotoList">
+                    <view class="weui-cell__bd">查看更多</view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                </view>
+            </view>
+        </view>
 </template>
